--- a/pass.html
+++ b/pass.html
@@ -131,6 +131,28 @@
                                      Chuu chuu chuuu chuuuuuuuuuu!<br>
                                      Chuu chuu chuuu chuuuuu!"<br>
                                      <br>
+                                      Teddy <br>
+                "Well, well, well  <br> 
+Look who’s all grown up now. <br>
+You didn’t think I would miss your birthday, did you? <br>
+How have you been, dear girl? <br>
+You’ve come a long way from stressing over exams <br>
+I remember perfectly when we would sit and study <br>
+You with your glasses and me with my own <br>
+You would rant about all the things that would worry you <br>
+I never got tired of it, you know. <br>
+It was an honor to sit in my own chair and listen to your voice <br>
+You were expressive without words <br>
+You were lovely, innocent and pure <br>
+I think of our time together, my purple jacket O ever so cozy <br>
+How delicate a heart one must have to clothe a teddy? <br>
+How delicate a soul can appreciate that? <br>
+Have the years been kind, dear girl? <br>
+I hope you have better company to have tea party with <br>
+Your hair certainly hasn’t changed and neither have your eyes <br>
+You still shame the angels <br>
+For this and many others to come,  <br>
+I wish you the happiest of birthday 💜 ." <br>
                                      Well that's enough drama,no?<br>
                                      I'm sure you have better things to do.<br>
                                      But<br>
